# freeasterix

./: Cargo.toml  LICENSE  README.md
crates/obj2asterix/: Cargo.toml  README.md
crates/spec_parser/: Cargo.toml  Readme.md
crates/spec_parser/examples/: print_format.rs
crates/spec_parser/src/: lib.rs  spec_json.rs  spec_xml_hard.rs  spec_xml_serde.rs  tests.rs  unit.rs
example/: Cargo.toml
example/src/: main.rs
samples/cat001/: 1_basic.json  2_half1.json
samples/cat002/: 1_basic.json
samples/cat004/: 1_basic.json
samples/cat010/: 1_basic.json  2_sensis.json
samples/cat019/: 1_basic.json
samples/cat020/: 1_basic.json
samples/cat021/: 1_basic.json
samples/cat034/: 1_basic.json
samples/cat048/: 1_basic.json
samples/cat062/: 0_f10.json  1_basic.json  2_f15.json  3_f70.json  4_f105.json  5_f100.json  6_f185.json  7_f210.json  8_f060.json  (+1 more)
specs-json/: gitrev.txt  list.txt  source.txt
specs-xml/: asterix.dtd  asterix_bds.xml  asterix_cat001_1_2.xml  asterix_cat002_1_0.xml  asterix_cat004_1_12.xml  asterix_cat008_1_0.xml  asterix_cat010_1_1.xml  asterix_cat011_1_2.xml  asterix_cat019_1_2.xml  asterix_cat020_1_7.xml  asterix_cat021_2_4.xml  asterix_cat023_1_2.xml  asterix_cat025_1_2.xml  asterix_cat032_7_0.xml  asterix_cat034_1_27.xml  asterix_cat048_1_21.xml  asterix_cat062_1_18.xml  asterix_cat063_1_3.xml  asterix_cat065_1_3.xml  asterix_cat129_1_1.xml  asterix_cat205_1_0.xml  asterix_cat240_1_3.xml  asterix_cat247_1_2.xml  asterix_cat252_7_0.xml  gitrev.txt  obsolete_asterix_cat030_6_2.xml  obsolete_asterix_cat031_6_2.xml  source.txt
(+61 files in other folders)
