[package]
name = "spec_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-xml-rs = { version = "0.6", optional = true }
hard-xml = "1.21.0"

[features]
xml_serde = ['serde-xml-rs'] 
